# jctp

./: .gitignore  README.md  build.cmd  build.sh
cpp/: CMakeLists.txt  build.cmd  build.sh
cpp/src/: CMakeLists.txt  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/: module-info.java
lib/: thostmduserapi_se.lib  thosttraderapi_se.lib
swig/: build.cmd  build.sh  jctp.i  string_array.i
